[tool.poetry]
name = "gateway_example"
version = "0.1.0"
description = "Gateway example"
authors = ["André Rocha <andre.rocha@enacom.com.br>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
